# Nutrition-Tracker

./: .dockerignore  .docstr.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  init.sh
docker/db_scripts/: init-db.sh
docker/nginx/: nginx.conf
src/food_hub/: manage.py  model_util.py  util.py
src/food_hub/assets/: index.js
src/food_hub/assets/scripts/: chart_util.js  util.js  (+1 more)
src/food_hub/authentication/: __init__.py  apps.py  forms.py  models.py  views.py
src/food_hub/core/: admin.py  decorators.py
src/food_hub/food_hub/: __init__.py  asgi.py  urls.py  wsgi.py
src/food_hub/main/: admin.py  api_urls.py  apps.py  decorators.py  forms.py  mixins.py  models.py  permissions.py  renderers.py  routers.py  serializers.py  signals.py  urls.py  views.py
src/food_hub/static/: bundle.css  bundle.js  bundle.js.LICENSE.txt  charts_wrapper.js
src/food_hub/util/: parse_fdc_data.py  util.py
src/nutrition_tracker/: manage.py
src/nutrition_tracker/authentication/: admin.py  apps.py  urls.py  views.py
src/nutrition_tracker/core/: api_urls.py  apps.py  signals.py  urls.py
src/nutrition_tracker/nutrition_tracker/: asgi.py  urls.py  wsgi.py
tests/: conftest.py  dummies.py  test_admin.py  test_decorators.py  test_forms.py  test_model_util.py  test_models.py  test_permissions.py  test_serializers.py  test_template_tags.py  test_util.py
tests/test_commands/: test_clear_empty_meals.py  test_load_fdc_data.py  test_load_fdc_data_helpers.py  test_load_fdc_data_parsers.py  test_load_nutrient_data.py  test_populate_fdc_data.py  test_populate_fdc_data_helpers.py  test_populate_fdc_data_parsers.py  test_populate_nutrient_data.py  test_populate_recommendation_data.py
tests/test_models/: __init__.py  conftest.py  test_food_models.py  test_meal_models.py  test_nutrient_models.py  test_profile.py  test_profile_models.py
tests/test_serializers/: conftest.py  test_fields.py  test_food_serializers.py  test_meal_serializers.py  test_profile_serializers.py  test_recipe_serializers.py
tests/test_util/: __init__.py  conftest.py  test_parse_food_csv.py  test_parse_food_nutrient_csv.py  test_parse_nutrient_csv.py  test_util.py
tests/test_views/: conftest.py  test_api_views.py  test_auth_views.py  test_component_collection_view_sets.py  test_current_meal_views.py  test_generics.py  test_htmx_views.py  test_hypermedia_views.py  test_main_views.py  test_meal_views.py  test_mixins.py  test_profile_views.py  test_recipe_views.py  test_session_util.py  util.py
(+258 files in other folders)
