[tool.poetry]
name = "food-hub"
version = "0.1.0"
description = ""
authors = ["SMassalski <stanislaw.massalski@gmail.com>"]
readme = "README.md"
packages = [{include = "food_hub", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
django-environ = "^0.9.0"
django-rest-framework = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest-django = "^4.5.2"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
docstr-coverage = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
django_find_project = false
pythonpath = [".", "src/food_hub"]
DJANGO_SETTINGS_MODULE = "food_hub.settings.test"
addopts = "--no-migrations --cov --cov-report html"


[tool.coverage.run]
branch = true
data_file = "coverage/.coverage"
source = ["src"]
omit = ["*/manage.py", "*/migrations/*", "src/food_hub/food_hub/*"]

[tool.coverage.report]
skip_empty = true
fail_under = 80

[tool.coverage.html]
directory = "coverage/html/"
title = "Food Hub Test Coverage Report"
